# cellaut-cpp

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
example2/: CMakeLists.txt  main.cpp
include/cellaut-cpp/: CellularAutomata.h
